# cmd/server/docs/swagger.json
@@ -473,12 +473,5 @@
                 }
             }
         }
-    },
-    "securityDefinitions": {
-        "XUserIdAuth": {
-            "type": "apiKey",
-            "name": "X-User-Id",
-            "in": "header"
-        }
     }
 }
